<resources>
    <string name="app_name">Read</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_math">Math Computation</string>
    <string name="menu_writing">Letter Writing</string>
    <string name="menu_spelling">Spelling</string>
    <string name="menu_reading">Reading Comprehension</string>
    <string name="menu_data">Database</string>
</resources>